<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2017 MINDORKS NEXTGEN PRIVATE LIMITED
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.mindorks.com/license/apache-v2
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_effective"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="@dimen/app_bar_height"
        android:gravity="center|start"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/nav_back_btn"
            style="@style/Button.ImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:background="@color/transparent"
            android:tint="@color/white"
            app:srcCompat="@drawable/ic_keyboard_backspace_24px" />

        <TextView
            style="@style/TextStyle.Heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/about"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        style="@style/TextStyle.Heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:autoLink="web"
        android:padding="20dp"
        android:text="@string/project_info"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_mvp_blog"
        style="@style/TextStyle.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:autoLink="web"
        android:padding="10dp"
        android:text="@string/link_mvp_blog"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tv_mvp_repo"
        style="@style/TextStyle.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:padding="10dp"
        android:text="@string/link_mvp_repo"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tv_mindorks_blog"
        style="@style/TextStyle.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:padding="10dp"
        android:text="@string/link_mindorks_blog"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tv_mindorks_repo"
        style="@style/TextStyle.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:padding="10dp"
        android:text="@string/link_mindorks_repo"
        android:textColor="@color/white" />
</LinearLayout>