<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2017 MINDORKS NEXTGEN PRIVATE LIMITED
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://mindorks.com/license/apache-v2
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="4dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="65dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="30dp">


            <TextView
                style="@style/TextStyle.Heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/rate_us" />

            <RatingBar
                android:id="@+id/rating_bar_feedback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:numStars="5"
                android:stepSize="1"
                tools:rating="3" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/view_play_store_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        style="@style/TextStyle.Heading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:gravity="center"
                        android:text="@string/rating_play_store_redirect_message_line_1"
                        android:textSize="18sp" />

                    <TextView
                        style="@style/TextStyle.Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:text="@string/rating_play_store_redirect_message_line_2" />

                    <Button
                        android:id="@+id/btn_rate_on_play_store"
                        style="@style/Button.Primary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:text="@string/rating_play_store_text" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/view_rating_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        style="@style/TextStyle.Heading"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:text="@string/rating_message"
                        android:textSize="18sp" />

                    <EditText
                        android:id="@+id/et_message"
                        style="@style/TextStyle.EditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/corner_border_rect_gray"
                        android:gravity="start|top"
                        android:inputType="textMultiLine"
                        android:lines="4"
                        android:maxLines="20"
                        android:padding="5dp" />
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/btn_later"
                style="@style/Button.Action.Negative"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/later" />

            <Button
                android:id="@+id/btn_submit"
                style="@style/Button.Action.Positive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/submit" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
